deploy/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-posts
  namespace: nestjs-app
  labels:
    application: app-posts-pod
spec:
  containers:
    - name: pickly-posts
      image: sahlkhalifa/app-posts:4.0
      # command: ["node"]
      # args: ["dist/src/main.js"]
      ports:
        - name: web
          containerPort: 3000
          protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: app-votes
  namespace: nestjs-app
  labels:
    application: app-votes-pod
spec:
  containers:
    - name: app-votes
      image: sahlkhalifa/app-posts:4.0
      ports:
        - name: web
          containerPort: 3000
          protocol: TCP
