deploy/postgresPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  namespace: nestjs-app
  labels:
    application: postgres-pod
spec:
  containers:
    - name: postgres
      image: postgres
      ports:
        - name: web
          containerPort: 5432
          protocol: TCP
