deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-posts
  namespace: nestjs-app
spec:
  selector:
    application: app-posts-pod
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app-votes
  namespace: nestjs-app
spec:
  selector:
    application: app-votes-pod
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: nestjs-app
spec:
  selector:
    application: postgres-pod
  ports:
    - name: web
      protocol: TCP
      port: 5432
      targetPort: 5432
